--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.2",
+    "@inquirer/prompts": "^7.3.2",
+    "chalk": "^4.1.2",
     "commander": "^13.1.0",
-    "download-git-repo": "^2.0.0",
-    "ini": "^1.3.5",
-    "inquirer": "^6.5.0",
-    "log-symbols": "^3.0.0",
-    "ora": "^3.4.0"
+    "download-git-repo": "^3.0.2",
+    "ini": "^5.0.0",
+    "log-symbols": "^4.1.0",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
     "@types/ini": "^4.1.1",
