--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "gcsoft-cli",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "一个简单的脚手架工具",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MonsterDOGz/gcsoft-cli.git"
+  },
   "main": "index.ts",
   "bin": {
     "gcsoft": "./bin/www"
@@ -11,8 +15,11 @@
     "build": "tsc",
     "watch": "tsc --watch"
   },
-  "author": "",
+  "author": "MonsterDOG",
   "license": "ISC",
+  "keywords": [
+    "cli"
+  ],
   "dependencies": {
     "@inquirer/prompts": "^7.3.2",
     "chalk": "^4.1.2",
