--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
         "${workspaceFolder}/src/main.ts"
       ],
       "outFiles": [
-        "${workspaceFolder}/dist/**/*.js"  // 可选
+        "${workspaceFolder}/lib/**/*.js"  // 可选
       ]
     },
     {
@@ -25,10 +25,10 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/dist/main.js",
+      "program": "${workspaceFolder}/lib/main.js",
       "preLaunchTask": "npm: build",  // 与 .vscode/tasks.json 中的任务名一致
       "outFiles": [
-        "${workspaceFolder}/dist/**/*.js"
+        "${workspaceFolder}/lib/**/*.js"
       ],
     }
   ]
