--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",          // 编译目标版本
     "module": "CommonJS",        // Node.js 推荐 CommonJS
     "rootDir": "./src",          // 源代码目录
-    "outDir": "./dist",          // 输出目录
+    "outDir": "./lib",          // 输出目录
     "strict": true,              // 启用严格类型检查
     "esModuleInterop": true,     // 兼容 CommonJS/ES 模块
     "skipLibCheck": true,        // 跳过第三方库类型检查
