--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gcsoft-cli",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "一个简单的脚手架工具",
+  "homepage": "https://github.com/MonsterDOGz/gcsoft-cli",
   "repository": {
     "type": "git",
     "url": "https://github.com/MonsterDOGz/gcsoft-cli.git"
